--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "air-datepicker": "^2.2.3",
     "bootstrap": "4.6",
     "jquery": "^3.6.0",
+    "lightbox": "^0.5.0",
+    "lightbox2": "^2.11.3",
     "popper.js": "^1.16.1",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12"
